[package]
name = "hawkbit-data-proxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = [ "json"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
tokio = { version = "1.47", features = ["full"] } 
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
